# file-uploader

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  index.html  pyproject.toml  setup.cfg
backend/file_uploader/: .env.example
backend/file_uploader/api/: serializers.py  tasks.py  tests.py  urls.py  views.py
backend/file_uploader/file_uploader/: celery.py  settings.py  urls.py
backend/file_uploader/files/: admin.py  models.py
backend/file_uploader/files/migrations/: 0001_initial.py  0002_alter_file_options.py  0003_alter_file_file.py
backend/file_uploader/templates/: index.html
backend/file_uploader/uploads/: 123_U8CEWJV.txt  github-recovery-codes.txt  moneybox_i7cE5Q8.txt  yand.txt
nginx/: default.conf
