[tool.poetry]
name = "file-uploader"
version = "0.1.0"
description = ""
authors = ["Egor Loskutov <egorkaloskutov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2"
djangorestframework = "3.14.0"
djoser = "^2.2.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
drf-yasg = "^1.21.7"
celery = "^5.2.2"
django-celery-beat = "^2.5.0"
kombu = "^5.2.2"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

