[tool.poetry]
name = "file-uploader"
version = "0.1.0"
description = ""
authors = ["Egor Loskutov <egorkaloskutov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.5"
djangorestframework = "3.14.0"
djoser = "^2.2.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
drf-yasg = "^1.21.7"
celery = "^5.2.2"
django-celery-beat = "^2.5.0"
kombu = "^5.2.2"
redis = "^5.0.1"
python-magic = "^0.4.27"
pillow = "^10.2.0"
fitz = "^0.0.1.dev2"
textract = "^1.6.5"
pydub = "^0.25.1"
pymupdf = "^1.23.20"
django-celery-results = "^2.5.1"
ffmpeg = "^1.4"
librosa = "^0.10.1"
ffprobe = "^0.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^23.12.1"
isort = "^5.13.2"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

